--- a/emotion.ipynb
+++ b/emotion.ipynb
@@ -48,7 +48,7 @@
     "  posi_emotion_num = 0\n",
     "  nati_emotion_num = 0\n",
     "  temp_ci = jieba.lcut(df_train['微博中文内容'][i])\n",
-    "  temp_ci = []\n",
+    "  ju = fun.relation(temp_ci)\n",
     "  for j in range(len(temp_ci)):#遍历获得的分词\n",
     "    #进行情感因素的统计工作\n",
     "    if temp_ci[j] in posi_dict:\n",
@@ -63,6 +63,8 @@
     "        nati_emotion_num += 1\n",
     "      else:\n",
     "        nati_emotion_num += weight\n",
+    "  posi_emotion_num *= ju\n",
+    "  nati_emotion_num *= ju\n",
     "  #进行情感的判别\n",
     "  if posi_emotion_num > 0 and nati_emotion_num == 0:\n",
     "    all_emotion_num = 1\n",
@@ -110,7 +112,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
