--- a/function.ipynb
+++ b/function.ipynb
@@ -6,7 +6,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from word_dict import posi_dict,nati_dict,fuci_dict_1,fuci_dict_2"
+    "from word_dict import posi_dict,nati_dict,fuci_dict_1,fuci_dict_2,nodict,fanwendict\n",
+    "import math"
    ]
   },
   {
@@ -111,7 +112,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 对副词的检查，以对情感进行修正"
+    "# 对副词、否定词、以及相对位置的检查，以对情感进行修正"
    ]
   },
   {
@@ -121,12 +122,47 @@
    "outputs": [],
    "source": [
     "def check_before(cut_list, pos):\n",
-    "  if cut_list[pos-1] in fuci_dict_1:\n",
-    "    return 4#较弱\n",
-    "  elif cut_list[pos-1] in fuci_dict_2:\n",
-    "    return 8#较强\n",
+    "  numofno=0#否定词的数量\n",
+    "  numoffu = 0#副词的数量\n",
+    "  jioffu = 0#副词的极性\n",
+    "  placeofno = 0#否定词的位置\n",
+    "  placeoffu = 0#副词的位置\n",
+    "  allno = 0#否定词的综合作用\n",
+    "  tp =0#词性的综合作用\n",
+    "  for i in range(pos-5,pos):\n",
+    "    if cut_list[i] in nodict:\n",
+    "      numofno += 1\n",
+    "      if placeofno == 0:\n",
+    "        placeofno = i\n",
+    "    if cut_list[i] in fuci_dict_1:\n",
+    "      numoffu += 1\n",
+    "      jioffu = 3\n",
+    "      if placeoffu == 0:\n",
+    "        placeoffu = i\n",
+    "    if cut_list[i] in fuci_dict_2:\n",
+    "      numoffu += 1\n",
+    "      jioffu = 2.1\n",
+    "      if placeoffu == 0:\n",
+    "        placeoffu = i\n",
+    "  if numofno == 0:\n",
+    "    allno = 1\n",
     "  else:\n",
-    "    return 0#default"
+    "    allno = math.pow(-1,numofno)\n",
+    "  \n",
+    "  if placeoffu < placeofno:\n",
+    "    tp = -2\n",
+    "  if placeoffu > placeofno:\n",
+    "    tp = 0.5\n",
+    "  else:\n",
+    "    tp = 1\n",
+    "  return tp*allno*jioffu"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 判别句型因素"
    ]
   },
   {
@@ -134,7 +170,28 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def relation(cut_list):\n",
+    "  Hw = 0#感叹号的数量\n",
+    "  Yw = 0#问号的数量\n",
+    "  ci = 0#反问词的出现情况\n",
+    "  fi = 1#综合的句型因素\n",
+    "  for i in range(len(cut_list)):\n",
+    "    if'!'== cut_list[i]:\n",
+    "      Hw += 1\n",
+    "    if '?' == cut_list:\n",
+    "      Yw += 1\n",
+    "    if cut_list[i] in fanwendict:\n",
+    "      ci += 1\n",
+    "  if Hw == 0:\n",
+    "    fi *= 1\n",
+    "  if Hw == 1 or Hw == 2:\n",
+    "    fi*=2\n",
+    "  if Yw>0 and ci>0:\n",
+    "    fi *= -1\n",
+    "  return fi\n",
+    "   "
+   ]
   }
  ],
  "metadata": {
@@ -153,7 +210,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6-final"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
